[tool.poetry]
name = "spkcspider-calendar"
description = "Calendar component"
version = "0.6.2"
authors = ["Alexander Kaftan"]
readme = "README.md"
repository = "https://github.com/spkcspider/spkcspider-calendar"
packages = [
    { include = "spider_calendar" },
]

[tool.poetry.dependencies]
python = ">=3.6"
django = ">=2.0"


[tool.poetry.extras]
spkcspider = ["spkcspider>=0.21"]
test = ["spkcspider[test]", "pytest-django", "django-webtest"]

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.4.0
skipsdist=true
envlist = py{35,36,37,38}-django{22,master}

[testenv]
commands = pytest tests


setenv =
    PYTHONDONTWRITEBYTECODE=1

deps =
  pytest-django
  spkcspider[test]
  django-webtest
  django22: Django>=2.2a1,<=2.2.999
  django30: Django>=3.0a1,<=3.0.999
  djangomaster: https://github.com/django/django/archive/master.zip

"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
